# notepm-mcp-server

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
notepm_mcp_server/: __init__.py  __main__.py  notepm.py
